Fix copy alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -45,7 +45,7 @@
 }
 
 .copy {
-  width: 90%;
+  padding: 0 20px;
 }
 
 .input {
